# CyberthonCOS

./: LSTM-voice-based-emotion-detection.ipynb  README.md  cnn-model-for-emotion-detection.ipynb  main.py  pyproject.toml  voice-based-emotion.ipynb
Backend/: .gitignore  Emotion_Recognizer.h5  Master.h5  PredictionModule.py  emotional.h5  main.py  model.py  pyproject.toml
website/: package-lock.json  package.json
website/app/: globals.css  page.js
website/app/about/: page.js
