[project]
name = "cyberthoncos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "tensorflow>=2.19.0",
]
